--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Rahil Makadia
 description: Ph.D. Candidate | University of Illinois at Urbana-Champaign
-baseurl: "" #name of GitHub repository
+baseurl: "/website" #name of GitHub repository
 url: "https://rahil-makadia.github.io" #custom url to be used instead of GitHub repository
 email: makadia2@illinois.edu
 
