--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Rahil Makadia
-description: Rahil Makadia's Website
+description: Ph.D. Candidate at UIUC
 # baseurl: "" #name of GitHub repository
 # url: "" #custom url to be used instead of GitHub repository
 email: makadia2@illinois.edu
