--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-### your site title here
-
 title: Rahil Makadia
 description: Ph.D. Candidate at UIUC
 # baseurl: "" #name of GitHub repository
@@ -23,7 +21,6 @@ ads: "Makadia,Rahil"
 # quora: "#"
 # instagram: "#"
 # facebook: "#"
-
 
 # Markdown
 highlighter: rouge
@@ -50,6 +47,7 @@ collections:
     permalink: /projects/:name/
     order:
       - dart.md
+      - grss.md
       - orex.md
 
 sass:
