--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rahil Makadia
-description: Ph.D. Candidate at UIUC
+description: Planetary Defense Scientist
 baseurl: ""
 url: "https://rahil-makadia.github.io"
 email: makadia2@illinois.edu
